--- a/images.html
+++ b/images.html
@@ -4,6 +4,24 @@
 	<link rel="stylesheet" href="style.css"></link>
 	<script src="script.js"></script>
 	
+	<script src="https://assets.adobedtm.com/0d7a963db5ca/daa4ac648182/launch-ffeddf51f572-development.min.js" async></script>
+
+	<script>
+		var digitalData = digitalData || {}
+		digitalData = {
+			page: {
+				pageId: "2",
+				pageName: "Image Page",
+				siteSection: "Form Image",
+				siteSubsection: "Image Selection",
+				server: "Github",
+				language: "en-in",
+				geoRegion: "IN",	
+				country: "India"		
+			},
+								
+	};
+	
 	<script>dataLayer = [];</script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
