Added Adobe script for Shilpa

--- a/thankyou.html
+++ b/thankyou.html
@@ -3,6 +3,24 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="script.js"></script>
 	
+	<script src="https://assets.adobedtm.com/0d7a963db5ca/daa4ac648182/launch-ffeddf51f572-development.min.js" async></script>
+
+	<script>
+		var digitalData = digitalData || {}
+		digitalData = {
+			page: {
+				pageId: "3",
+				pageName: "Thank You Page",
+				siteSection: "Thank you Page",
+				siteSubsection: "Form Submit",
+				server: "Github",
+				language: "en-in",
+				geoRegion: "IN",	
+				country: "India"		
+			},
+								
+	};
+	
 	<script>dataLayer = [];</script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
