--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 			},
 								
 	};
-	
+	</script>
+		
 	<script>dataLayer = [];</script>
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
