--- a/images.html
+++ b/images.html
@@ -4,20 +4,15 @@
 	<link rel="stylesheet" href="style.css"></link>
 	<script src="script.js"></script>
 	
-	<script src="https://assets.adobedtm.com/0d7a963db5ca/daa4ac648182/launch-ffeddf51f572-development.min.js" async></script>
+	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script>
 
 	<script>
 		var digitalData = digitalData || {}
 		digitalData = {
 			page: {
-				pageId: "2",
-				pageName: "Image Page",
-				siteSection: "Form Image",
-				siteSubsection: "Image Selection",
-				server: "Github",
-				language: "en-in",
-				geoRegion: "IN",	
-				country: "India"		
+				pageName: "Home:Images",
+				siteSection: "Enquiry",
+				siteSubsection: "Image-Selection",		
 			},
 								
 	};
