--- a/thankyou.html
+++ b/thankyou.html
@@ -3,20 +3,16 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="script.js"></script>
 	
-	<script src="https://assets.adobedtm.com/0d7a963db5ca/daa4ac648182/launch-ffeddf51f572-development.min.js" async></script>
+	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script>
 
 	<script>
 		var digitalData = digitalData || {}
 		digitalData = {
 			page: {
-				pageId: "3",
-				pageName: "Thank You Page",
-				siteSection: "Thank you Page",
-				siteSubsection: "Form Submit",
-				server: "Github",
-				language: "en-in",
-				geoRegion: "IN",	
-				country: "India"		
+				pageName: "Home:Thank-You-Page",
+				siteSection: "Enquiry",
+				siteSubsection: "Form-Submit",
+		
 			},
 								
 	};
