--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="script.js"></script>
 	
-	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script>
+<!-- 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
 
-	<script>
+<!-- 	<script>
 		var digitalData = digitalData || {}
 		digitalData = {
 			page: {
@@ -15,7 +15,7 @@
 		
 			},
 								
-	};
+	}; -->
 		
 	</script>
 		
