--- a/images.html
+++ b/images.html
@@ -4,9 +4,9 @@
 	<link rel="stylesheet" href="style.css"></link>
 	<script src="script.js"></script>
 	
-<!-- 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
+ 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
 
-<!-- 	<script>
+ 	<script>
 		var digitalData = digitalData || {}
 		digitalData = {
 			page: {
@@ -16,7 +16,7 @@
 			},
 								
 	};
-	</script> -->
+	</script>
 	
 	<script>dataLayer = [];</script>
 	<!-- Google Tag Manager -->
