--- a/thankyou.html
+++ b/thankyou.html
@@ -3,20 +3,20 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="script.js"></script>
 	
-<!-- 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
+	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
 
-// 	<script>
-// 		var digitalData = digitalData || {}
-// 		digitalData = {
-// 			page: {
-// 				pageName: "Home:Thank-You-Page",
-// 				siteSection: "Enquiry",
-// 				siteSubsection: "Form-Submit",
+ 	<script>
+ 		var digitalData = digitalData || {}
+ 		digitalData = {
+ 			page: {
+ 				pageName: "Home:Thank-You-Page",
+ 				siteSection: "Enquiry",
+ 				siteSubsection: "Form-Submit",
 		
-// 			},
+ 			},
 								
-// 	};
-// 	</script>
+ 	};
+ 	</script>
 	
 	<script>dataLayer = [];</script>
 	<!-- Google Tag Manager -->
