--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="style.css"></link>
 	<script src="script.js"></script>
 	
- 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> -->
+ 	<script src="https://assets.adobedtm.com/0d7a963db5ca/d149575aa440/launch-91939399719d-development.min.js" async></script> 
 
  	<script>
 		var digitalData = digitalData || {}
